Add Head Chef dashboard attention layer (#4)
* Add inventory ledger phase one


* Fix ledger verification issues


* Add recipe cost trust signals


* Fix prep component cost query


* Add cover-based prep planning engine


* Add head chef dashboard attention layer


---------
